# FaceRecognitionOnFPGA

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  config.ini
kernel/: conv_16_16.aocx  conv_16_32.aocx  conv_4_16.aocx  conv_4_32.aocx  conv_4_64.aocx  conv_8_16.aocx  conv_8_32.aocx
model/: MTCNN_det1.prototxt  MTCNN_det2.prototxt  MTCNN_det2_input.prototxt  MTCNN_det3.prototxt  MTCNN_det3_input.prototxt  center_face.caffemodel  center_face_deploy.prototxt
src/: CMakeLists.txt  config.ini  main.cpp
src/libFPGA/: CMakeLists.txt  main.cpp
src/libFPGA/include/: featureExtractor.h  hardwareParam.h  layerConfig.h  netConfig.h  oclUtil.h  timer.h
src/libFPGA/kernel/: conv_pipe.cl
src/libFPGA/src/: featureExtractor.cpp  layerConfig.cpp  oclUtil.cpp  timer.cpp
src/libFaceDetect/: CMakeLists.txt  mtcnn.cpp  mtcnn.h
src/libFeature/: CMakeLists.txt  center_face.cpp  center_face.h
src/libSearch/: CMakeLists.txt  README.md
src/libSearch/include/: SpinLock.h  redisManager.h  searchTool.h
src/libSearch/lib/hash_scan/: CMakeLists.txt  MIH.cpp  MIH.h  array32.cpp  bucket_group.h  com_neptune_api_MIH.h  io.h  linscan.cpp  linscan.h  linscan_interface.cpp  mihasher.cpp  mihasher.h  mihcudahasher .h  sparse_hashtable.cpp  sparse_hashtable.h
src/libSearch/src/: redisManager.cpp  searchTool.cpp
src/libSearch/tools/: add_bvecs.cpp
src/qtUI/: blacklist_database.cpp  blacklist_database.h  blacklist_widget.cpp  blacklist_widget.h  global.cpp  global.h  handle_worker.cpp  handle_worker.h  log_system.cpp  log_system.h  main_widget.cpp  main_widget.h  my_qlabel.cpp  my_qlabel.h  qcustomplot.h  search_tool.h  title_widget.cpp  title_widget.h  track_widget.cpp  track_widget.h  windows_title.cpp  windows_title.h
src/resources/: resources.qrc
